// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox with children should render loading state 1`] = `
<i
  aria-live="polite"
  class="spinner is-loading"
  data-testid="spinner"
>
  <span
    class="sw-sr-only sw-left-[-10000px]"
  >
    loading
  </span>
</i>
`;

exports[`Checkbox with no children should render loading state 1`] = `
<i
  aria-live="polite"
  class="spinner is-loading"
  data-testid="spinner"
>
  <span
    class="sw-sr-only sw-left-[-10000px]"
  >
    me
  </span>
</i>
`;

exports[`should render the checkbox on the right 1`] = `
<a
  aria-checked="true"
  aria-label="me"
  class="link-checkbox"
  href="#"
  role="checkbox"
>
  <a>
    child
  </a>
  <div
    class="sw-overflow-hidden"
  >
    <i
      aria-live="polite"
      class="spinner sw-sr-only sw-left-[-10000px]"
      data-testid="spinner"
    />
  </div>
  <i
    class="icon-checkbox icon-checkbox-checked"
  />
</a>
`;
